# bevy_3d_sprites

./: Cargo.toml
assets/art/: monastery-back-shelf.vox  monk2.vox
assets/art/Monkv2-2/: Monkv2 1.mtl  Monkv2 10.mtl  Monkv2 11.mtl  Monkv2 12.mtl  Monkv2 13.mtl  Monkv2 14.mtl  Monkv2 15.mtl  Monkv2 16.mtl  Monkv2 17.mtl  Monkv2 2.mtl  Monkv2 3.mtl  Monkv2 4.mtl  Monkv2 5.mtl  Monkv2 6.mtl  Monkv2 7.mtl  Monkv2 8.mtl  Monkv2 9.mtl
assets/art/idle/: monk-idle-2.vox  monk-idle-3.vox  monk-idle-4.vox  monk-idle-6.vox  monk-idle-7.vox  monk-idle-8.vox
assets/art/monkobj/: GreyWall 1.mtl  Monastary back 1.mtl  Monastary back.vox  Monastery-back2-shelf 1.mtl  greenground 1.mtl  monk 10.mtl  monk 11.mtl  monk 12.mtl  monk 13.mtl  monk 14.mtl  monk 2.mtl  monk 3.mtl  monk 4.mtl  monk 5.mtl  monk 6.mtl  monk 7.mtl  monk 8.mtl  monk 9.mtl  monk-1.mtl
assets/art/monkv2/: Monkv2-idle1.mtl  Monkv2-sit0.mtl  Monkv2-walk1.mtl  Monkv2-walk2.mtl  Monkv2-walk3.mtl  Monkv2-walk4.mtl  Monkv2-write1.mtl  Monkv2-write2.mtl  Monkv2-write3.mtl  Monkv2-write4.mtl  Monkv2-write5.mtl  Monkv2-write6.mtl  Monkv2-write7.mtl  Monkv2.mtl copy
assets/art/other/: monastery-back.vox  monk.vox
assets/art/peon/: Peon0.vox  Peon1.vox  Peon2.vox  Peon3.vox  Peon4.vox  Peon5.vox  Peon6.vox  Peon7.vox  Peon8.vox
assets/art/walk/: monk-walk-1.vox  monk-walk-2.vox  monk-walk-3.vox  monk-walk-4.vox  monk-walk-5.vox  monk-walk-6.vox
assets/art/wall/: MonasteryBack1 1.mtl  MonasteryBack1-top 1.mtl  MonasteryBack2 1.mtl  MonasteryBack2-top 1.mtl  MonasteryBack3 1.mtl  MonasteryBack3-top 1.mtl  MonasteryBack4 1.mtl  MonasteryBack4-top 1.mtl  btp-bg1.mtl  btp-ch1.mtl
assets/ui/: pcsenior.kttf  pcsenior_font.kayak_font
assets/ui/font_old/: roboto.kttf  ui_wood.fnt  voke_font.kayak_font  voke_font.kttf  voke_font_otf.kayak_font  voke_font_otf.kttf
mandoqueue_macro/: Cargo.toml
mandoqueue_macro/src/: lib.rs
src/: animations.rs  audio.rs  components.rs  game_commands.rs  game_mando.rs  game_setup.rs  macros.rs  macros_help.rs  main.rs  main_v1.rs  mandoqueue.rs  messages.rs  movement.rs  mq2.rs  seldom_pixel_prep.rs  type_writer.rs  ui.rs
src/animations/: cycle_ynyn_anims.rs
src/for_keeps/: game_mando.rs  main_v2.rs  mandoqueue.rs  type_writer.rs
src/game_commands/: change_anim.rs  fmo-mod.rs  hide_message_ui.rs  mando_queue.rs  move_to_loc_2d.rs  move_to_loc_2d_i.rs  move_to_loc_3d.rs  pause_queue.rs  play_anim_once.rs  show_message.rs  show_message_ui.rs  show_portrait_message.rs  show_small_message.rs  type_writer_effect.rs  ynyn_anim_state_chgs.rs
src/game_setup/: load_assets.rs  scene_1_setup.rs
src/movement/: move_panel.rs  move_player.rs
src/seldom_pixel/: px_components
src/seldom_state/: seldom_state_components.rs  seldom_states.rs  seldom_triggers.rs
