[package]
name = "bev-game2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

resolver = "2" # Bevy needs this for better optimization

# bevy_typewriter = "^0.2"

[dependencies]
bevy_sprite3d = "^2.3"
rand = "^0.8"
syn = { version = "^1" }
bevy-inspector-egui = "^0.16.6"
iyes_loopless = "0.9.1"
kayak_ui = "^0.2.0"
kayak_font = "^0.2.0"
substring = "^1.4.5"
notify = "5.0.0-pre.15"
seldom_state = "^0.3.0"
bevy_vox_mesh = "0.5"
seldom_pixel = { git = "https://github.com/Seldom-SE/seldom_pixel", rev = "2b599a4" }
mandoqueue_macro = { path = "mandoqueue_macro" }
bevy_obj = "0.9.1"
# bevy_rapier3d = "0.21.0"

[dependencies.bevy]
version = "0.9.1"
default-features = false
# These are the remaining default features other than `bevy_audio` and `vorbis`
features = [
  "render",
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.11"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[dependencies.bevy_asset_loader]
version = "^0.14.1"
features = ["2d", "3d", "stageless"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
embed-resource = "1.6.3"

# Add the contents of this file to `config.toml` to enable "fast build" configuration. Please read the notes below.

# NOTE: For maximum performance, build using a nightly compiler
# If you are using rust stable, remove the "-Zshare-generics=y" below.

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
# `brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/bin/zld", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=n"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
#debug = 1